# cpp_game_of_life

./: CMakeLists.txt  README.md
include/Grid/: grid.h
include/Simulation/: simulation.h
src/: main.cpp
src/Grid/: grid.cpp
src/Simulation/: simulation.cpp
